Fix spacing between validation and style bar at the bottom.

--- a/css/style3.css
+++ b/css/style3.css
@@ -75,6 +75,9 @@ body{
   bottom: 0;
 
 }
+.card-body {
+  margin-bottom: 70px;
+}
 
 @media only screen and (max-width: 1000px) {
   #Peter, #Nic, #KK, #Elena {
